source/patterns/elements/field/field.css
/**
 * Field (Element/Atom)
 * Base input/select/textarea field component without label/helper.
 *
 * BEM: ps-field, ps-field__input, ps-field__icon, ps-field__error
 * Variants: text | number | email | search | select | textarea
 * Modifiers: --error, --disabled, --filled, --hover, --focus, --done, --icon-left, --icon-right
 * States: default, hover, focus, filled, error, disabled
 */

.ps-field {
  margin: 0;
  padding: 0;
  display: inline-flex;
  position: relative;
  align-items: center;
  width: 100%;
  max-width: 100%;
  min-height: var(--size-10);
  background-color: var(--ps-color-field-bg);
  border: var(--border-size-1) solid var(--ps-color-border-default);
  border-radius: var(--radius-2);
  transition:
    border-color 150ms cubic-bezier(0.4, 0.0, 0.2, 1),
    background-color 150ms cubic-bezier(0.4, 0.0, 0.2, 1),
    border-width 150ms cubic-bezier(0.4, 0.0, 0.2, 1);

  &__input {
    margin: 0;
    border: none;
    outline: none;
    background: transparent;
    display: block;
    width: 100%;
    flex: 1;
    padding: var(--size-2) var(--size-3);
    min-height: inherit;
    font-family: var(--font-sans);
    font-size: var(--size-4);
    font-weight: var(--font-weight-400);
    line-height: var(--leading-normal);
    color: var(--ps-color-field-text);
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;

    &::placeholder {
      color: var(--ps-color-field-placeholder);
      opacity: 1;
    }
  }

  &__icon {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    flex-shrink: 0;
    width: var(--size-5);
    height: var(--size-5);
    font-family: bnpre-icons;
    font-size: var(--size-5);
    font-style: normal;
    font-weight: var(--font-weight-400);
    line-height: 1;
    color: var(--gray-500);
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;

    &--left {
      margin-left: var(--size-3);
      order: -1;
    }

    &--right {
      margin-right: var(--size-3);
      order: 1;
    }
  }

  &__error {
    display: block;
    position: absolute;
    bottom: calc(-1 * var(--size-7));
    left: 0;
    font-family: var(--font-sans);
    font-size: var(--size-305);
    font-weight: var(--font-weight-400);
    line-height: var(--leading-normal);
    color: var(--ps-color-border-error);
    margin-top: var(--size-1);
  }

  &:hover:not(&--disabled):not(&--error) {
    border-color: var(--ps-color-border-hover);
  }

  &:focus-within:not(&--disabled):not(&--error):not(&--done) {
    border-color: var(--black);
    border-width: var(--border-size-2);
  }

  &--error {
    border-color: var(--ps-color-border-error);
    border-width: var(--border-size-2);

    .ps-field__icon {
      color: var(--ps-color-border-error);
    }
  }

  &--disabled {
    background-color: var(--ps-color-field-disabled-bg);
    border-color: var(--ps-color-border-default);
    cursor: not-allowed;

    .ps-field__input {
      color: var(--gray-500);
      cursor: not-allowed;
      user-select: none;

      &::placeholder {
        color: var(--gray-400);
      }
    }

    .ps-field__icon {
      color: var(--ps-color-field-disabled-text);
    }
  }

  &--filled .ps-field__input {
    font-weight: var(--font-weight-400);
  }

  &--done {
    border-color: var(--ps-color-border-success);
    border-width: var(--border-size-2);

    .ps-field__icon {
      color: var(--ps-color-border-success);
    }
  }

  &--icon-left .ps-field__input {
    padding-left: var(--size-2);
  }

  &--icon-right .ps-field__input {
    padding-right: var(--size-2);
  }

  &--select .ps-field__input,
  &--dropdown .ps-field__input {
    cursor: pointer;
    user-select: none;
  }

  &--number .ps-field__input {
    -moz-appearance: textfield;

    &::-webkit-outer-spin-button,
    &::-webkit-inner-spin-button {
      -webkit-appearance: none;
      margin: 0;
    }
  }

  &--textarea {
    align-items: flex-start;
  }
}

textarea.ps-field__input {
  resize: vertical;
  min-height: var(--size-20);
  padding-top: var(--size-2);
  padding-bottom: var(--size-2);
}

